# psk-recorder

./: .gitignore  CLAUDE.md  README.md  deploy.toml  pyproject.toml
config/: psk-recorder-config.toml  psk-recorder-config.toml.template
docs/: ARCHITECTURE.md  CONFIG.md  INSTALL.md  OPERATIONS.md  SIGMOND-CONTRACT.md
scripts/: deploy.sh  install.sh
src/psk_recorder/: __init__.py  __main__.py  cli.py  config.py  configurator.py  contract.py  version.py
src/psk_recorder/core/: authority_reader.py  recorder.py  ring.py  slot.py  stream.py  uploader.py  wav.py
systemd/: psk-recorder@.service
tests/: test_authority_reader.py  test_configurator.py  test_contract.py  test_ring.py  test_slot.py  test_stream_anchoring.py  test_wav.py
tests/fixtures/: test-config.toml
